2003-04-30  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/spacing-spanner.cc, ly/paper-init.ly: introduced paper
	variable "packed" for packed right-ragged mode

	* lily/spacing-spanner.cc: fixed typo: colunm -> column; removed
	unused variable ragged; fixed indentation

	* Documentation/user/refman.itely: tiny cleanups in ancient
	clef and custos section

2003-04-30  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/parser.yy (Simple_music): add \applyoutput, syntax
	\applyoutput PROCEDURE

	* lily/my-lily-lexer.cc: add \applyoutput.

	* scm/music-types.scm (music-descriptions): add ApplyOutputEvent.

	* lily/text-item.cc: clean text-interface description

2003-04-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/{regression,test}/: use postfix for slur endings and beam
	begins.

	* lily/beam-engraver.cc (acknowledge_grob): set melismata for new
	style beams too. 

	* input/regression/lyrics-melisma-beam.ly: new file.

	* lily/lyric-engraver.cc (process_music): change from
	process_acknowledged_grobs()

	* scm/auto-beam.scm (override-auto-beam-setting): write Scheme
	functions to set and revert auto-beam settings.

2003-04-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc (number_accidentals): gh_assoc -> scm_assoc.

2003-04-24  Juergen Reuter  <reuter@ipd.uka.de>

	* ChangeLog, Documentation/topdocs/AUTHORS.texi,
	Documentation/user/lilypond.tely: fixed some typos; updated author
	info

	* Documentation/user/music-glossary.tely: bugfix: #'flag-style =
	#"" -> #'flag-style = #'()

	* lily/cluster-engraver.cc, lily/ligature-bracket-engraver.cc:
	cleanup: removed dead #includes

	* lily/gregorian-ligature-engraver.cc,
	lily/include/gregorian-ligature.hh,
	scm/grob-property-description.scm: small cleanups, small spacing
	fixes

	* lily/gregorian-ligature-engraver.cc, lily/parser.yy,
	lily/vaticana-ligature.cc,
	lily/include/gregorian-ligature-engraver.hh,
	scm/grob-property-description.scm, scm/music-types.scm:
	"porrectus" -> "pes or flexa"
