@@ -3563,7 +3563,6 @@ i2002-07-12  Mats Bengtsson  <matsb@s3.kth.se>
 	* lily/staff-spacing.cc (next_notes_correction): Correct the
 	spacing of a note following a barline.
 
-
 2002-03-04  Glen Prideaux
 
 	* mf/feta-solfa.mf: Shaped note heads
